[project]
name = "rag-agent"
version = "0.1.0"
description = ""
authors = [
    {name = "Rogerio Campos",email = "rogerio.campos07@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "langchain (>=1.2.8,<2.0.0)",
    "langchain-google-genai (>=4.2.0,<5.0.0)",
    "streamlit (>=1.53.1,<2.0.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "langchain-text-splitters (>=1.1.0,<2.0.0)",
    "typing-inspect (>=0.9.0,<0.10.0)",
    "langchain-chroma (>=1.1.0,<2.0.0)",
    "chromadb (>=1.4.1,<2.0.0)"
]



[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)",
    "taskipy (>=1.14.1,<2.0.0)",
    "ruff (>=0.14.14,<0.15.0)"
]

[tool.ruff]
line-length = 79
extend-exclude = ['migrations']

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.pytest.ini_options]
pythonpath = "."
addopts = '-p no:warnings'

[tool.taskipy.tasks]
lint = 'ruff check'
pre_format = 'ruff check --fix'
format = 'ruff format'
run = 'streamlit run app.py'
pre_test = 'task lint'
test = 'pytest -s -x --cov=rag_agent -vv'
post_test = 'coverage html'

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
